// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportBrowser3 does not render the report attribute filters when the user is not a client admin 1`] = `
<div>
  <Connect(QuestionnaireTypeTabsForDashboard) />
  <div
    className="form-group"
    style={
      Object {
        "marginTop": "10px",
        "verticalAlign": "middle",
      }
    }
  >
    <Connect(AuditCycleSelectorForDashboard) />
     
    <Connect(StateSelector) />
     
    <Connect(CitySelector) />
     
    <Connect(StoreTypeSelector) />
     
    <Connect(StorePrioritySelector) />
     
    <Connect(StartDateSelector) />
     
    <Connect(EndDateSelector) />
     
    <div
      className="btn-group pull-right hidden-print"
    >
       Download:
      <br />
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="Download Reports"
      >
        <Download />
         
        2
         Reports  
        <span
          className="caret"
        />
      </button>
      <DropDown>
        <li>
          <Connect(DownloadSummaryButton) />
        </li>
        <li>
          <Connect(DownloadDetailsButton) />
        </li>
        <li>
          <PrintToPDFButton
            sectionCount={0}
          />
        </li>
      </DropDown>
    </div>
  </div>
  <Connect(AuditStoreTable) />
</div>
`;

exports[`ReportBrowser3 renders a loading widget when no cycle is selected 1`] = `
<div>
  <Connect(QuestionnaireTypeTabsForDashboard) />
  <div
    className="form-group"
    style={
      Object {
        "marginTop": "10px",
        "verticalAlign": "middle",
      }
    }
  >
    <Connect(AuditCycleSelectorForDashboard) />
     
    <Connect(StateSelector) />
     
    <Connect(CitySelector) />
     
    <Connect(StoreTypeSelector) />
     
    <Connect(StorePrioritySelector) />
     
    <Connect(StartDateSelector) />
     
    <Connect(EndDateSelector) />
     
    <Connect(ReportAttributeFilters) />
    <div
      className="btn-group pull-right hidden-print"
    >
       Download:
      <br />
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="Download Reports"
      >
        <Download />
         
        0
         Reports  
        <span
          className="caret"
        />
      </button>
      <DropDown>
        <li>
          <Connect(DownloadSummaryButton) />
        </li>
        <li>
          <Connect(DownloadDetailsButton) />
        </li>
        <li>
          <PrintToPDFButton
            sectionCount={0}
          />
        </li>
      </DropDown>
    </div>
  </div>
  <Loading />
</div>
`;

exports[`ReportBrowser3 renders a message when there are no audit cycles 1`] = `
<div>
  <Connect(QuestionnaireTypeTabsForDashboard) />
  <div
    className="form-group"
    style={
      Object {
        "marginTop": "10px",
        "verticalAlign": "middle",
      }
    }
  >
    <Connect(AuditCycleSelectorForDashboard) />
     
    <Connect(StateSelector) />
     
    <Connect(CitySelector) />
     
    <Connect(StoreTypeSelector) />
     
    <Connect(StorePrioritySelector) />
     
    <Connect(StartDateSelector) />
     
    <Connect(EndDateSelector) />
     
    <Connect(ReportAttributeFilters) />
    <div
      className="btn-group pull-right hidden-print"
    >
       Download:
      <br />
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="Download Reports"
      >
        <Download />
         
        0
         Reports  
        <span
          className="caret"
        />
      </button>
      <DropDown>
        <li>
          <Connect(DownloadSummaryButton) />
        </li>
        <li>
          <Connect(DownloadDetailsButton) />
        </li>
        <li>
          <PrintToPDFButton
            sectionCount={0}
          />
        </li>
      </DropDown>
    </div>
  </div>
  <Jumbotron
    align="center"
    heading="there are no reports here"
    para="yet"
  />
</div>
`;

exports[`ReportBrowser3 renders the audit store table with correct props 1`] = `
<div>
  <Connect(QuestionnaireTypeTabsForDashboard) />
  <div
    className="form-group"
    style={
      Object {
        "marginTop": "10px",
        "verticalAlign": "middle",
      }
    }
  >
    <Connect(AuditCycleSelectorForDashboard) />
     
    <Connect(StateSelector) />
     
    <Connect(CitySelector) />
     
    <Connect(StoreTypeSelector) />
     
    <Connect(StorePrioritySelector) />
     
    <Connect(StartDateSelector) />
     
    <Connect(EndDateSelector) />
     
    <Connect(ReportAttributeFilters) />
    <div
      className="btn-group pull-right hidden-print"
    >
       Download:
      <br />
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="Download Reports"
      >
        <Download />
         
        2
         Reports  
        <span
          className="caret"
        />
      </button>
      <DropDown>
        <li>
          <Connect(DownloadSummaryButton) />
        </li>
        <li>
          <Connect(DownloadDetailsButton) />
        </li>
        <li>
          <PrintToPDFButton
            sectionCount={0}
          />
        </li>
      </DropDown>
    </div>
  </div>
  <Connect(AuditStoreTable) />
</div>
`;
